   HBASE-2307  hbase-2295 changed hregion size, testheapsize broke... fix it
   HBASE-2269  PerformanceEvaluation "--nomapred" may assign duplicate random
               seed over multiple testing threads (Tatsuya Kawano via Stack)
   HBASE-2287  TypeError in shell (Alexey Kovyrin via Stack)
   HBASE-2311  Not having assertions enabled causes index contrib tests to fail

  IMPROVEMENTS
   HBASE-2180  Bad read performance from synchronizing hfile.fddatainputstream
   HBASE-2185  Add html version of default hbase-site.xml (Kay Kay via Stack)
   HBASE-2189  HCM trashes meta cache even when not needed
   HBASE-2190  HRS should report to master when HMsg are available
   HBASE-2177  Use datestamp timestamping gc logging.
   HBASE-2222  Improve log "Trying to contact region server Some server for
               region, row 'ip_info_100,,1263329969690', but failed after
               11 attempts".
   HBASE-2220  Add a binary comparator that only compares up to the length
               of the supplied byte array (Bruno Dumon via Stack)
   HBASE-2241  Change balancer sloppyness from 0.1 to 0.3
   HBASE-2262  ZKW.ensureExists should check for existence
   HBASE-2249  The PerformanceEvaluation read tests don't take the MemStore
               into account
   HBASE-2249  The PerformanceEvaluation read tests don't take the MemStore
               into account
   HBASE-2277  Update branch to hadoop 0.20.2
   HBASE-2234  Roll Hlog if any datanode in the write pipeline dies
               (Nicolas Spiegelberg via Stack)
   HBASE-2174  Stop from resolving HRegionServer addresses to names using DNS
               on every heartbeat (Karthik Ranganathan via Stack)

  NEW FEATURES
   HBASE-2257  [stargate] multiuser mode
   HBASE-2263  [stargate] multiuser mode: authenticator for zookeeper
   HBASE-2273  [stargate] export metrics via Hadoop metrics, JMX, and zookeeper
   HBASE-2274  [stargate] filter support: JSON descriptors